plang/testing/logs/false-incorrect/10/program10.p.p
xVW :- (((x2yva)), qpn (fZuD opr (BJV) (phZ (IfHs5) (og h (Qi) (Y1NS) DMKH) UGfea i4)) (tVzQe KqR (d) s) HR; gtK (skv (VCP) (R)) WwIg rw, iACh ITtkN (AN) (AK) P; eAb3; rH lA (tTcnA H67AV YR vb1AR (Z)) (lM8er); (s); qF zx (dZ3I8 t) t T, q1Nk (L1)).
cDXh fZ (hF5C (olx (MHHT)) (k) SS) (N) c :- ((tO); wWVEf); pps0z, (y); tT QMl65 db, fed ibN7 KDQ, (n1v IUPP (NEZ) L LG; p6pi Zl (fMS Nvf7) (CQwH) wP13), (jdsNu (RDB)).
p6zU Nj9 h (sCQN k0 (OU) (EH8I)) (IA) :- (q, bKKjf Lp1hR (s0kN OXE)); sG (P) x9NT (SFQ4); s qo0 H1Q, lu7pz dJsxj (I1Ay), (rKVT (MmjFL) (VSC) (bh (C0IV) (N) q9GZ (IN)) (Bm)); zy CEiLH, gpr (n5Msh (sBm (BHv) l (A3) sgj)) (tZm0 b5 (GWE) XS a65), a KujVE (neYK (Hh)); lKA (Us) (g2 (s vBD (Kc) S86fp) (W)), vWi0; nUKb (Aui), y5rK RTRu; f uqn3y (SCmZq) (JGH) aKXi, j5o IwBx Qfs ZmB; d24 (k (iEHzw (S1G)) fkSV2 YWEm3) a3rJq UCtrF; ia2 Vh (SD); (n (B) (B9Ksw) EjOS (iethK); d oSYs (bRaf) H6).


x bu8x (S16x) lx fc.


n0K3 (TF) (kg4S (A) Ha0x w47Op (GJ)) C6Bh.

fQ bKULr (i xQ3O MY).


pJDc (mb) (ZO) a8 s1 :- ((oslj Kzr (L) (NL4M) (eA x8 PaTl (RxDwv)))); (eN), (pRRyG d (Oc6X) (It5)), sjtf o1lQ, q8t BO, rOyp NV3E (kRc UOw w (Nzl8) (mJ m (fy9Vk Q))); ((n; zQ7 (Pt5Z) g3 (kIL3e E0 DLBE))), pB4 r; mde3c (GZgbk) (UToW).
? (eJ (a) (O) (K) h); (rMXEq Fe); vFso6 (qH5 AsQ); (g (h1 (D8Xj9)), aLr (qdLoE)); (pFt crlP (y2B (p)) (fEny3 kh7F (JKY) lLDG) MvclW); (j (U) (POg7A) (saI (ME) (oA1kZ) (zyuh tkhV n))).
